--- a/wordpress.conf
+++ b/wordpress.conf
@@ -1,12 +1,12 @@
 <VirtualHost *:80>
-    DocumentRoot /var/www/wordpress
-    <Directory /var/www/wordpress>
+    DocumentRoot /var/www/wordpress-main
+    <Directory /var/www/wordpress-main>
         Options FollowSymLinks
         AllowOverride Limit Options FileInfo
         DirectoryIndex index.php
         Require all granted
     </Directory>
-    <Directory /var/www/wordpress/wp-content>
+    <Directory /var/www/wordpress-main/wp-content>
         Options FollowSymLinks
         Require all granted
     </Directory>
