--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,15 @@ jobs:
         echo "Deploying main branch..."
         ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
           cd /var/www/wordpress-main || exit
-          
+
           # Ensure git is aware of the repository
-          sudo chown -R www-data:www-data /var/www/wordpress-main
           git config --global --add safe.directory /var/www/wordpress-main
 
           # Pull the latest changes for main
           sudo -u www-data git pull origin main
+
+          # Restart web server
+          sudo systemctl restart apache2 
         EOF
 
     - name: Deploy to EC2 for Staging Branch
@@ -41,11 +43,13 @@ jobs:
         echo "Deploying staging branch..."
         ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
           cd /var/www/wordpress-staging || exit
-          
+
           # Ensure git is aware of the repository
-          sudo chown -R www-data:www-data /var/www/wordpress-staging
           git config --global --add safe.directory /var/www/wordpress-staging
 
           # Pull the latest changes for staging
           sudo -u www-data git pull origin staging
+
+          # Restart web server
+          sudo systemctl restart apache2
         EOF
