--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,55 @@
-name: Deploy to EC2
-
-on:
-  push:
-    branches:
-      - main
-      - staging
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    environment: env
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-    - name: Deploy to EC2 for Main Branch
-      if: github.ref == 'refs/heads/main'
-      run: |
-        echo "Deploying main branch..."
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-          cd /var/www/wordpress-main || exit
-
-          # Ensure git is aware of the repository
-          git config --global --add safe.directory /var/www/wordpress-main
-
-          # Pull the latest changes for main
-          sudo -u www-data git pull origin main
-
-          # Restart web server
-          sudo systemctl restart apache2 
-        EOF
-
-    - name: Deploy to EC2 for Staging Branch
-      if: github.ref == 'refs/heads/staging'
-      run: |
-        echo "Deploying staging branch..."
-        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-          cd /var/www/wordpress-staging || exit
-
-          # Ensure git is aware of the repository
-          git config --global --add safe.directory /var/www/wordpress-staging
-
-          # Pull the latest changes for staging
-          sudo -u www-data git pull origin staging
-
-          # Restart web server
-          sudo systemctl restart apache2
-        EOF
+#name: Deploy to EC2
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#      - staging
+#
+#jobs:
+#  deploy:
+#    runs-on: ubuntu-latest
+#    environment: env
+#
+#    steps:
+#    - name: Checkout code
+#      uses: actions/checkout@v3
+#
+#    - name: Set up SSH
+#      uses: webfactory/ssh-agent@v0.7.0
+#      with:
+#        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+#
+#    - name: Deploy to EC2 for Main Branch
+#      if: github.ref == 'refs/heads/main'
+#      run: |
+#        echo "Deploying main branch..."
+#        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+#          cd /var/www/wordpress-main || exit
+#
+#          # Ensure git is aware of the repository
+#          git config --global --add safe.directory /var/www/wordpress-main
+#
+#          # Pull the latest changes for main
+#          sudo -u www-data git pull origin main
+#
+#          # Restart web server
+#          sudo systemctl restart apache2
+#        EOF
+#
+#    - name: Deploy to EC2 for Staging Branch
+#      if: github.ref == 'refs/heads/staging'
+#      run: |
+#        echo "Deploying staging branch..."
+#        ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+#          cd /var/www/wordpress-staging || exit
+#
+#          # Ensure git is aware of the repository
+#          git config --global --add safe.directory /var/www/wordpress-staging
+#
+#          # Pull the latest changes for staging
+#          sudo -u www-data git pull origin staging
+#
+#          # Restart web server
+#          sudo systemctl restart apache2
+#        EOF
